# game

./: .gitignore  .gitmodules  CMakeLists.txt
src/: event.hpp  eventBus.cpp  event_bus.cpp  event_bus.hpp  event_dispatcher.hpp  event_manager.hpp  event_publisher.hpp  filesystem.cpp  filesystem.hpp  game.cpp  game.hpp  input.cpp  input.hpp  keycodes.hpp  log.hpp  main.cpp  mousecodes.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp  window.cpp  window.hpp
src/renderer/: camera.cpp  camera.hpp  gl_element_buffer.cpp  gl_element_buffer.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp  renderer.cpp  renderer.hpp  static_batch.cpp  static_batch.hpp  vertex.hpp
